--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li>data</li>
+		<li>ns</li>
+		<li>test</li>
+	</ol>
+	<ul>
+		<li>data</li>
+		<li>ns</li>
+		<li>test</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
