--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li>data</li>
-		<li>ns</li>
-		<li>test</li>
+		<li>jeans</li>
+		<li>shirt</li>
+		<li>trouser</li>
 	</ol>
 	<ul>
-		<li>data</li>
-		<li>ns</li>
-		<li>test</li>
+		<li>maldives</li>
+		<li>singapore</li>
+		<li>dubai</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
